# A-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  maze_generator.py  pyproject.toml  requirements.txt
MazeGenerator/: Cell.py  Config.py  Exceptions.py  MazeGenerator.py  Pallets.py  __init__.py
mazegen/: Cell.py  Config.py  Exceptions.py  MazeGenerator.py  Pallets.py  __init__.py
