[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen-1.0.0-py3-<login1>-<login2>"
version = "1.0.0"
descriptiom = "Um gerenciador de labirintos"
authors = [
    { name = "<nome1>", email = "<email1>" },
    { name = "<nome2>", email = "<email2>" }
]
requires-python = ">=3.8"

dependencies = []